# tap-service-titan

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  meltano.yml  pyproject.toml  tox.ini
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: scrape-openapi-specs.yml  test.yml
openapi_specs/: accounting-v2.json  crm-v2.json  customer-interactions-v2.json  dispatch-v2.json  equipment-systems-v2.json  forms-v2.json  inventory-v2.json  jbce-v2.json  jpm-v2.json  marketing-ads-v2.json  marketing-reputation-v2.json  marketing-v2.json  memberships-v2.json  payroll-v2.json  pricebook-v2.json  reporting-v2.json  salestech-v2.json  scheduling-pro-v2.json  service-agreements-v2.json  settings-v2.json  task-management-v2.json  telecom.json
scripts/: autogenerate.py  download_openapi_specs.py  prompts.md  scrape_openapi_specs.py
tap-service-titan/: meltano.yml  pyproject.toml
tap-service-titan/tap_service_titan/: auth.py  client.py  streams.py  tap.py
tap-service-titan/tests/: test_core.py
tap_service_titan/: __init__.py  __main__.py  ap_credits.py  auth.py  client.py  custom_reports.py  streams.py  tap.py
tap_service_titan/openapi_specs/: __init__.py  accounting-v2.json  crm-v2.json  customer-interactions-v2.json  dispatch-v2.json  equipment-systems-v2.json  findings-v2.json  forms-v2.json  inventory-v2.json  jbce-v2.json  jpm-v2.json  marketing-ads-v2.json  marketing-reputation-v2.json  marketing-v2.json  memberships-v2.json  payroll-v2.json  pricebook-v2.json  reporting-v2.json  salestech-v2.json  scheduling-pro-v2.json  service-agreements-v2.json  settings-v2.json  task-management-v2.json  telecom.json  timesheets-v2.json
tap_service_titan/streams/: __init__.py  accounting.py  crm.py  customer_interactions.py  dispatch.py  equipment_systems.py  forms.py  inventory.py  job_booking.py  jpm.py  marketing.py  marketing_ads.py  marketing_reputation.py  memberships.py  payroll.py  pricebook.py  reporting.py  sales_and_estimates.py  scheduling_pro.py  service_agreements.py  settings.py  task_management.py  telecom.py
tests/: __init__.py  conftest.py  test_core.py  test_pagination.py  test_schema_evolution.py
tests/__snapshots__/: test_schema_evolution.ambr
tests/__snapshots__/test_schema_evolution/: test_catalog_changes[activity_codes].json  test_catalog_changes[adgroup_performance].json  test_catalog_changes[adjustments].json  test_catalog_changes[ap_credits].json  test_catalog_changes[ap_payments].json  test_catalog_changes[appointment_assignments].json  test_catalog_changes[appointments].json  test_catalog_changes[arrival_windows].json  test_catalog_changes[attributed_leads].json  test_catalog_changes[bank_deposit_transactions].json  test_catalog_changes[bank_deposits].json  test_catalog_changes[booking_provider_tags].json  test_catalog_changes[bookings].json  test_catalog_changes[business_hours].json  test_catalog_changes[business_units].json  test_catalog_changes[call_reasons].json  test_catalog_changes[calls].json  test_catalog_changes[campaign_performance].json  test_catalog_changes[campaigns].json  test_catalog_changes[capacities].json  test_catalog_changes[capacity_warnings].json  test_catalog_changes[categories].json  test_catalog_changes[client_specific_pricing].json  test_catalog_changes[costs].json  test_catalog_changes[credit_memos].json  test_catalog_changes[customer_contacts].json  test_catalog_changes[customer_notes].json  test_catalog_changes[customers].json  test_catalog_changes[customers_custom_fields].json  test_catalog_changes[discounts_and_fees].json  test_catalog_changes[employees].json  test_catalog_changes[equipment].json  test_catalog_changes[estimate_items].json  test_catalog_changes[estimates].json  test_catalog_changes[export_equipment].json  test_catalog_changes[export_materials].json  test_catalog_changes[export_services].json  test_catalog_changes[forms].json  test_catalog_changes[gl_account_types].json  test_catalog_changes[gl_accounts].json  (+83 more)
tests/snapshots/test_schema_evolution/test_catalog_changes/: activity_codes.json  adgroup_performance.json  adjustments.json  ap_credits.json  ap_payments.json  appointment_assignments.json  appointments.json  arrival_windows.json  attributed_leads.json  booking_provider_tags.json  bookings.json  business_hours.json  business_units.json  call_reasons.json  calls.json  campaign_performance.json  campaigns.json  capacities.json  capacity_warnings.json  catalog.json  categories.json  client_specific_pricing.json  costs.json  customer_contacts.json  customer_notes.json  customers.json  customers_custom_fields.json  discounts_and_fees.json  employees.json  equipment.json  estimate_items.json  estimates.json  export_equipment.json  export_materials.json  export_services.json  forms.json  gl_accounts.json  gross_pay_items.json  installed_equipment.json  inventory_bills.json  (+76 more)
