[project]
name = "tap-service-titan"
version = "0.0.1"
description = "Singer tap for ServiceTitan, built with the Meltano Singer SDK."
authors = [{ name = "Cody Hanson", email = "cody@arch.dev" }]
maintainers = [{ name = "Meltano", email = "hello@meltano.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "Apache-2.0"
keywords = ["ELT", "ServiceTitan"]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "backports-httpmethod~=0.2.1 ; python_version < '3.11'",
    "singer-sdk[faker]~=0.53.0",
    "requests~=2.32.3",
    "typing-extensions==4.15.0",
]

[project.optional-dependencies]
s3 = ["s3fs~=2025.10.0"]

[project.scripts]
tap-service-titan = "tap_service_titan.tap:TapServiceTitan.cli"

[dependency-groups]
dev = [
    { include-group = "scrapping" },
    { include-group = "test" },
    { include-group = "typing" },
    "typer>=0.12.5",
    "jsonref>=1.1.0,<2",
]
scrapping = ["beautifulsoup4>=4.12.3", "playwright>=1.48.0,<2", "rich>=14.2.0"]
test = [
    "pytest>=9",
    "singer-sdk[testing]",
    "syrupy>=5.0.0",
]
typing = [
    { include-group = "test" },
    "backports-httpmethod",
    "mypy>=1.18.2",
    "ty>=0.0.1a24",
    "types-requests>=2",
]

[tool.hatch.build.targets.sdist]
include = ["tap_service_titan"]

[tool.hatch.build.targets.wheel]
include = ["tap_service_titan"]

[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[tool.mypy]
warn_unused_configs = true

[tool.pytest]
minversion = "9.0.0"
addopts = ["-vv"]

[tool.ruff]
line-length = 100
src = ["tap_service_titan"]

[tool.ruff.lint]
ignore = [
    "COM812", # missing-trailing-comma
    "ISC001", # single-line-implicit-string-concatenation
    "FIX",  # allow TODO comments
    "ERA",  # allow commented-out code
]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = [
    "S101", # asserts in pytest functions is OK
]
"scripts/**.py" = [
    "ANN",  # don't require annotations in scripts
    "T201",  # allow `print` in scripts
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.isort]
known-first-party = ["tap_service_titan"]

[tool.ruff.lint.pydocstyle]
convention = "google"
